@@ -6,7 +6,7 @@ import com.fajars.expensetracker.report.*;
 import com.fajars.expensetracker.report.export.CsvExporter;
 import com.fajars.expensetracker.report.export.ExcelExporter;
 import com.fajars.expensetracker.report.export.PdfExporter;
-import com.fajars.expensetracker.subscription.SubscriptionService;
+import com.fajars.expensetracker.subscription.SubscriptionHelper;
 import com.fajars.expensetracker.transaction.Transaction;
 import com.fajars.expensetracker.transaction.TransactionRepository;
 import lombok.RequiredArgsConstructor;
@@ -42,7 +42,7 @@ public class ExportTransactionsUseCase implements ExportTransactions {
     private final PdfExporter pdfExporter;
     private final MetricsService metricsService;
     private final BusinessEventLogger businessEventLogger;
-    private final SubscriptionService subscriptionService;
+    private final SubscriptionHelper subscriptionHelper;
 
     @Override
     @Transactional(readOnly = true)
@@ -53,8 +53,9 @@ public class ExportTransactionsUseCase implements ExportTransactions {
         // 1. Validate export quota (TODO: implement premium check)
         validateExportQuota(userId, request);
 
-        // 2. Fetch transactions with filter
-        List<Transaction> transactions = fetchTransactions(userId, request.filter());
+        // 2. Convert ExportFilter to ReportFilter and fetch transactions
+        ReportFilter reportFilter = convertToReportFilter(userId, request.filter());
+        List<Transaction> transactions = fetchTransactions(userId, reportFilter);
 
         // 3. Generate file based on format
         byte[] fileContent = generateFile(transactions, request.format());
@@ -91,13 +92,48 @@ public class ExportTransactionsUseCase implements ExportTransactions {
     }
 
     /**
+     * Convert ExportFilter to ReportFilter with export-specific settings.
+     */
+    private ReportFilter convertToReportFilter(UUID userId, ExportFilter exportFilter) {
+        int exportLimit = subscriptionHelper.getExportLimit(userId);
+
+        // Handle null filter - default to last 30 days
+        if (exportFilter == null) {
+            return new ReportFilter(
+                LocalDateTime.now().minusDays(30),
+                LocalDateTime.now(),
+                null, null, null, 0, exportLimit
+            );
+        }
+
+        // Convert LocalDate to LocalDateTime
+        LocalDateTime startDateTime = exportFilter.startDate() != null
+            ? exportFilter.startDate().atStartOfDay()
+            : LocalDateTime.now().minusDays(30);
+
+        LocalDateTime endDateTime = exportFilter.endDate() != null
+            ? exportFilter.endDate().atTime(23, 59, 59)
+            : LocalDateTime.now();
+
+        return new ReportFilter(
+            startDateTime,
+            endDateTime,
+            exportFilter.walletIds(),
+            exportFilter.categoryIds(),
+            exportFilter.type(),
+            0,  // page - always start from first page for export
+            exportLimit  // size - use export limit
+        );
+    }
+
+    /**
      * Validate export quota based on user subscription tier.
      * Free users: limited to 100 records
      * Premium users: up to 10,000 records
      */
     private void validateExportQuota(UUID userId, ExportRequest request) {
-        boolean isPremium = subscriptionService.isPremiumUser(userId);
-        int exportLimit = subscriptionService.getExportLimit(userId);
+        boolean isPremium = subscriptionHelper.isPremiumUser(userId);
+        int exportLimit = subscriptionHelper.getExportLimit(userId);
 
         log.debug("Export quota for user {}: {} (premium: {})", userId, exportLimit, isPremium);
 
@@ -108,16 +144,7 @@ public class ExportTransactionsUseCase implements ExportTransactions {
      * Fetch transactions based on filter criteria.
      */
     private List<Transaction> fetchTransactions(UUID userId, ReportFilter filter) {
-        int exportLimit = subscriptionService.getExportLimit(userId);
-
-        if (filter == null) {
-            // Default filter: last 30 days
-            filter = new ReportFilter(
-                LocalDateTime.now().minusDays(30),
-                LocalDateTime.now(),
-                null, null, null, 0, exportLimit
-            );
-        }
+        int exportLimit = subscriptionHelper.getExportLimit(userId);
 
         // Apply export limit to page size
         int maxSize = Math.min(filter.size(), exportLimit);
@@ -130,8 +157,8 @@ public class ExportTransactionsUseCase implements ExportTransactions {
 
         Page<Transaction> page = transactionRepository.findByUserIdWithFilters(
             userId,
-            filter.hasWalletFilter() && !filter.walletIds().isEmpty() ? filter.walletIds().get(0) : null,
-            filter.hasCategoryFilter() && !filter.categoryIds().isEmpty() ? filter.categoryIds().get(0) : null,
+            filter.hasWalletFilter() && !filter.walletIds().isEmpty() ? filter.walletIds().getFirst() : null,
+            filter.hasCategoryFilter() && !filter.categoryIds().isEmpty() ? filter.categoryIds().getFirst() : null,
             filter.hasTypeFilter() ? com.fajars.expensetracker.transaction.TransactionType.valueOf(filter.type()) : null,
             filter.startDate(),
             filter.endDate(),
